[package]
name = "container"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
# Remova 'unistd' e adicione 'feature = ["user"]' se precisar de UID/GID futuramente
nix = { version = "0.27", features = ["sched", "mount", "hostname", "process", "fs", "dir"] }
toml = "1.0"